--- a/res/values-nn/strings.xml
+++ b/res/values-nn/strings.xml
@@ -335,6 +335,7 @@
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">No kan me laga førehandsvisningar av lenkjer til nokre av dei mest populære nettstadene, viss du vil.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Du kan skru på eller av denne funksjonen når som helst i Signal-innstillingane dine (Privay → Send lenkjesniktitt).</string>
   <string name="ExperienceUpgradeActivity_got_it">Ålreit</string>
+  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Kvifor bruka ord når du kan bruka klistremerke?</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Hentar ei melding …</string>
   <!--GcmRefreshJob-->
