--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -336,6 +336,10 @@ weergaven.</string>
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">De optie om voorbeelden weer te geven wordt vanaf nu ondersteund voor enkele van de populairste weblocaties op het internet.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Je kunt deze functionaliteit op elk gewenst moment in- of uitschakelen in je Signal-instellingen (Privacy &gt; Voorbeeldweergaven verzenden).</string>
   <string name="ExperienceUpgradeActivity_got_it">Begrepen</string>
+  <string name="ExperienceUpgradeActivity_introducing_stickers">Signal introduceert stickers</string>
+  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Waarom zou je woorden gebruiken als je ook stickers kunt gebruiken?</string>
+  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers_tap_this_icon">Waarom zou je woorden gebruiken als je ook stickers kunt gebruiken? Tik op dit pictogram op je toetsenbord:</string>
+  <string name="ExperienceUpgradeActivity_lets_go">Doorgaan</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Bericht aan het ophalen…</string>
   <!--GcmRefreshJob-->
@@ -704,7 +708,7 @@ Signal heeft ook toegang nodig tot de foto\'s, media en bestanden op je apparaat
   <string name="ThreadRecord_sticker">Sticker</string>
   <string name="ThreadRecord_disappearing_photo">Zelf-wissende foto</string>
   <string name="ThreadRecord_disappearing_video">Zelf-wissende video</string>
-  <string name="ThreadRecord_s_is_on_signal">%s maakt gebruik van Signal!</string>
+  <string name="ThreadRecord_s_is_on_signal">%s gebruikt nu ook Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Zelf-wissende berichten uitgeschakeld</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Berichten zullen zichzelf wissen %s nadat ze gelezen zijn</string>
   <string name="ThreadRecord_safety_number_changed">Veiligheidsnummer veranderd</string>
