--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -363,6 +363,7 @@
   <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Náhľady sú teraz voliteľne podporované pre niektoré z najpopulárnejších webových stránok na internete.</string>
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Túto funkciu môžete kedykoľvek vypnúť alebo zapnúť v nastaveniach Signal-u (Súkromie &gt; Posielať náhľady stránok).</string>
   <string name="ExperienceUpgradeActivity_got_it">Chápem</string>
+  <string name="ExperienceUpgradeActivity_why_use_words_when_you_can_use_stickers">Prečo používať slová, keď môžete používať nálepky?</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Preberanie správy…</string>
   <!--GcmRefreshJob-->
